# sleuth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
brute-mutator/: Cargo.toml
brute-mutator/src/: cover.rs  fn_predicate.rs  lib.rs
mutator/: Cargo.toml
mutator/src/: lib.rs  mutate.rs
poirot-mutator/: Cargo.toml
poirot-mutator/src/: cover.rs  lib.rs
sleuth-mutator/: Cargo.toml  README.md
sleuth-mutator/src/: lib.rs  mutate.rs  parse.rs
sleuth-mutator/src/x/: mod.rs  parse.rs
src/: ast.rs  basic.rs  expr-scratch.rs  expr.rs  f.rs  interpreter.rs  lib.rs  main.rs  poirot.rs  util.rs
test/: Cargo.toml
test/src/: lib.rs  poirot.rs  sleuth.rs
