[package]
name = "sleuth"
version = "0.1.0"
edition = "2021"
description = "Extremely opinionated testing framework generating an exact specification and reducing code to its minimal implementation."
license = "Zlib"
repository = "https://github.com/wrsturgeon/sleuth"
readme = "README.md"
keywords = ["testing", "safety", "test", "compiler", "parser"]
categories = [
  "development-tools",
  "development-tools::testing",
  "compilers",
  "compression",
]

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = ">=1"
colored = ">=2"
hashbrown = { version = ">=0.13", features = ["inline-more"] }
mutator = { version = ">=0.1.0", path = "mutator" }
prettyplease = ">=0.2"
syn = { version = ">=2", features = ["extra-traits", "full"] }
