[package]
name = "sleuth"
version = "0.1.3"
edition = "2021"
description = "Extremely opinionated testing framework generating an exact specification and reducing code to its minimal implementation."
license = "Zlib"
repository = "https://github.com/wrsturgeon/sleuth"
readme = "README.md"
keywords = ["testing", "safety", "test", "compiler", "parser"]
categories = [
  "development-tools",
  "development-tools::testing",
  "compilers",
  "compression",
]
exclude = [".github"]

[lib]
crate-type = ["lib"]

[dependencies]
colored = ">=2"
prettyplease = ">=0.2"
sleuth-mutator = { version = ">=0", path = "sleuth-mutator" }
syn = { version = ">=2", features = ["extra-traits", "full"] }
